2014-12-22  Andy Buckley  <andy.buckley@cern.ch>

	* Add Fortran lhapdf_getpdfsetlist function, returning the list of
	available PDF sets as a space-separated string. Note the lhapdf_
	prefix -- this is the intended 'namespace' form for a new Fortran
	interface at some point.

2014-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Remove obsolete config flags from lhapdf.conf

	* examples/compatibility.cc: Simplify compatibility macro checking.

2014-10-29  Andy Buckley  <andy.buckley@cern.ch>

	* Add parsing and use of the internal PID data line in GridPDF.cc,
	in preference to the PDF::flavors() method. This fixes a bug,
	since flavors() was sorting the list, meaning that data files
	without monotonically sorted PID columns would wrongly assign PDFs
	to PIDs.

2014-10-08  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Added new ContinuationExtrapolator to provide same extrapolation
	as in the MSTW standalone code (and LHAPDF5 when using MSTW sets).

2014-10-03  Andy Buckley  <andy.buckley@cern.ch>

	* Better code organisation and protection against out-of-bounds
	array accesses in log-bicubic interpolator.

2014-08-28  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Fallback to bilinear interpolator if using bicubic
	interpolator with only 2 or 3 Q2 knots in a subgrid.

2014-08-26  Andy Buckley  <andy.buckley@cern.ch>

	* Improve LHAGlue info messages to not specify that particular
	generators are being used.

2014-08-19  Andy Buckley  <andy.buckley@cern.ch>

	* LHAPDF 6.1.4 release

2014-08-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding multiset variants of the 5 getmin/max LHAGlue functions.

	* Adding the 'unofficial' getminmax Fortran function to LHAGlue.cc
	(thanks to Andrey Sapronov for the report and patch).

2014-07-18  Andy Buckley  <andy.buckley@cern.ch>

	* Treat PID 0 as an alias for 21 in PDF::hasFlavor as well as the
	PDF::xf* functions. Thanks to Nathan Hartland for the report.

2014-07-10  Andy Buckley  <andy.buckley@cern.ch>
